@startuml

title __MUSICSTATE's Class Diagram__\n

  namespace gamesource {
    namespace State {
      namespace musicState {
        class gamesource.State.musicState.FifthBackMusic {
            - BackGround : AudioNode
            - app : SimpleApplication
            - node : Node
            # cleanup()
            # initialize()
            # onDisable()
            # onEnable()
            - initAudio()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace State {
      namespace musicState {
        class gamesource.State.musicState.FirstBackMusic {
            - BackGround : AudioNode
            - app : SimpleApplication
            - node : Node
            # cleanup()
            # initialize()
            # onDisable()
            # onEnable()
            - initAudio()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace State {
      namespace musicState {
        class gamesource.State.musicState.ForthBackMusic {
            - BackGround : AudioNode
            - app : SimpleApplication
            - node : Node
            # cleanup()
            # initialize()
            # onDisable()
            # onEnable()
            - initAudio()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace State {
      namespace musicState {
        class gamesource.State.musicState.SecondBackMusic {
            - BackGround : AudioNode
            - app : SimpleApplication
            - node : Node
            # cleanup()
            # initialize()
            # onDisable()
            # onEnable()
            - initAudio()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace State {
      namespace musicState {
        class gamesource.State.musicState.SixthBackMusic {
            - BackGround : AudioNode
            - app : SimpleApplication
            - node : Node
            # cleanup()
            # initialize()
            # onDisable()
            # onEnable()
            - initAudio()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace State {
      namespace musicState {
        class gamesource.State.musicState.ThirdBackMusic {
            - BackGround : AudioNode
            - app : SimpleApplication
            - node : Node
            # cleanup()
            # initialize()
            # onDisable()
            # onEnable()
            - initAudio()
        }
      }
    }
  }
  

  gamesource.State.musicState.FifthBackMusic -up-|> com.jme3.app.state.BaseAppState
  gamesource.State.musicState.FirstBackMusic -up-|> com.jme3.app.state.BaseAppState
  gamesource.State.musicState.ForthBackMusic -up-|> com.jme3.app.state.BaseAppState
  gamesource.State.musicState.SecondBackMusic -up-|> com.jme3.app.state.BaseAppState
  gamesource.State.musicState.SixthBackMusic -up-|> com.jme3.app.state.BaseAppState
  gamesource.State.musicState.ThirdBackMusic -up-|> com.jme3.app.state.BaseAppState



@enduml
